working in terminal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,6 +60,7 @@
             </div>
         </main>
     </div>
+    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
     <script src="script.js"></script>
 </body>
 
