--- a/static/index.html
+++ b/static/index.html
@@ -14,120 +14,140 @@
         <!-- Header -->
         <header class="app-header">
             <div class="header-content">
-                <div class="logo">
-                    <i class="fas fa-robot"></i>
-                    <h1>HWAgent</h1>
+                <div class="header-left">
+                    <button class="header-sidebar-toggle" id="headerSidebarToggle" title="Toggle Sidebar">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                    <div class="logo">
+                        <i class="fas fa-robot"></i>
+                        <h1>HWAgent</h1>
+                    </div>
                 </div>
-                <div class="status-indicator" id="connectionStatus">
-                    <span class="status-dot offline"></span>
-                    <span class="status-text">Connecting...</span>
+                <div class="status-indicator">
+                    <div class="status-dot" id="connectionStatus"></div>
+                    <span id="connectionText">Connecting...</span>
                 </div>
             </div>
         </header>
 
         <!-- Main Content -->
         <main class="main-content">
+            <!-- Sidebar overlay for mobile -->
+            <div class="sidebar-overlay" id="sidebarOverlay"></div>
+            
             <!-- Sidebar -->
-            <aside class="sidebar">
-                <div class="sidebar-section collapsible-section">
-                    <h3 class="section-header" data-target="settingsContent">
-                        <i class="fas fa-cog"></i> Settings
-                        <i class="fas fa-chevron-down toggle-icon"></i>
-                    </h3>
-                    <div class="section-content" id="settingsContent">
-                        <div class="setting-item">
-                            <label>
-                                <input type="checkbox" id="streamingToggle" checked>
-                                <span class="checkmark"></span>
-                                Streaming Mode
-                            </label>
-                        </div>
-                        <div class="setting-item">
-                            <label>
-                                <input type="checkbox" id="autoScrollToggle" checked>
-                                <span class="checkmark"></span>
-                                Auto Scroll
-                            </label>
-                        </div>
-                    </div>
+            <div class="sidebar">
+                <div class="sidebar-header">
+                    <h1><i class="fas fa-robot"></i>HWAgent</h1>
+                    <button class="sidebar-toggle" title="Toggle Sidebar">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
                 </div>
-
-                <div class="sidebar-section collapsible-section" id="tmpDirectoryExplorer">
-                    <h3 class="section-header" data-target="tmpDirectoryContent">
-                        <i class="fas fa-folder-open"></i> TMP Directory
-                        <i class="fas fa-chevron-down toggle-icon"></i>
-                    </h3>
-                    <div class="section-content" id="tmpDirectoryContent">
-                        <div class="file-explorer-toolbar">
-                            <button id="tmpRefreshBtn" title="Refresh"><i class="fas fa-sync-alt"></i></button>
-                            <button id="tmpUpBtn" title="Parent Directory" disabled><i class="fas fa-arrow-up"></i></button>
-                            <span id="tmpCurrentPath" class="current-path">/</span>
-                        </div>
-                        <div id="tmpFileList" class="file-list">
-                            <!-- File items will be dynamically inserted here -->
-                        </div>
-                        <div id="tmpFilePreview" class="file-preview">
-                            <div class="file-preview-header">
-                                <span id="previewFileName">Select a file to preview</span>
-                                <button id="closePreviewBtn" title="Close Preview"><i class="fas fa-times"></i></button>
+                <!-- Sidebar resizer -->
+                <div class="sidebar-resizer"></div>
+                
+                <!-- Sidebar content -->
+                <div class="sidebar-content">
+                    <div class="sidebar-section collapsible-section">
+                        <h3 class="section-header" data-target="settingsContent">
+                            <i class="fas fa-cog"></i> Settings
+                            <i class="fas fa-chevron-down toggle-icon"></i>
+                        </h3>
+                        <div class="section-content" id="settingsContent">
+                            <div class="setting-item">
+                                <label>
+                                    <input type="checkbox" id="streamingToggle" checked>
+                                    <span class="checkmark"></span>
+                                    Streaming Mode
+                                </label>
                             </div>
-                            <pre id="previewFileContent"></pre>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="sidebar-section collapsible-section tools-section-collapsible">
-                    <h3 class="section-header" data-target="toolsContent">
-                        <i class="fas fa-tools"></i> Tools Available
-                        <i class="fas fa-chevron-down toggle-icon"></i>
-                    </h3>
-                    <div class="section-content" id="toolsContent">
-                        <div id="toolsList" class="tools-list tools-list-collapsible">
-                            <div class="loading-tools">Loading tools...</div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="sidebar-section collapsible-section">
-                    <h3 class="section-header" data-target="sessionInfoContent">
-                        <i class="fas fa-info-circle"></i> Session Info
-                        <i class="fas fa-chevron-down toggle-icon"></i>
-                    </h3>
-                    <div class="section-content" id="sessionInfoContent">
-                        <div id="sessionInfo" class="session-info">
-                            <div class="info-item">
-                                <span class="label">Session ID:</span>
-                                <span class="value" id="sessionId">-</span>
-                            </div>
-                            <div class="info-item">
-                                <span class="label">Messages:</span>
-                                <span class="value" id="messageCount">0</span>
-                            </div>
-                            <div class="info-item">
-                                <span class="label">Status:</span>
-                                <span class="value" id="sessionStatus">Ready</span>
+                            <div class="setting-item">
+                                <label>
+                                    <input type="checkbox" id="autoScrollToggle" checked>
+                                    <span class="checkmark"></span>
+                                    Auto Scroll
+                                </label>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="sidebar-section collapsible-section">
-                    <h3 class="section-header" data-target="actionsContent">
-                        <i class="fas fa-cog"></i> Actions
-                        <i class="fas fa-chevron-down toggle-icon"></i>
-                    </h3>
-                    <div class="section-content" id="actionsContent">
-                        <button class="action-btn clear-btn" id="clearContextBtn">
-                            <i class="fas fa-eraser"></i>
-                            Clear Context
-                        </button>
-                        <button class="action-btn export-btn" id="exportChatBtn">
-                            <i class="fas fa-download"></i>
-                            Export Chat
-                        </button>
+                    <div class="sidebar-section collapsible-section" id="tmpDirectoryExplorer">
+                        <h3 class="section-header" data-target="tmpDirectoryContent">
+                            <i class="fas fa-folder-open"></i> TMP Directory
+                            <i class="fas fa-chevron-down toggle-icon"></i>
+                        </h3>
+                        <div class="section-content" id="tmpDirectoryContent">
+                            <div class="file-explorer-toolbar">
+                                <button id="tmpRefreshBtn" title="Refresh"><i class="fas fa-sync-alt"></i></button>
+                                <button id="tmpUpBtn" title="Parent Directory" disabled><i class="fas fa-arrow-up"></i></button>
+                                <span id="tmpCurrentPath" class="current-path">/</span>
+                            </div>
+                            <div id="tmpFileList" class="file-list">
+                                <!-- File items will be dynamically inserted here -->
+                            </div>
+                            <div id="tmpFilePreview" class="file-preview">
+                                <div class="file-preview-header">
+                                    <span id="previewFileName">Select a file to preview</span>
+                                    <button id="closePreviewBtn" title="Close Preview"><i class="fas fa-times"></i></button>
+                                </div>
+                                <pre id="previewFileContent"></pre>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sidebar-section collapsible-section tools-section-collapsible">
+                        <h3 class="section-header" data-target="toolsContent">
+                            <i class="fas fa-tools"></i> Tools Available
+                            <i class="fas fa-chevron-down toggle-icon"></i>
+                        </h3>
+                        <div class="section-content" id="toolsContent">
+                            <div id="toolsList" class="tools-list tools-list-collapsible">
+                                <div class="loading-tools">Loading tools...</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sidebar-section collapsible-section">
+                        <h3 class="section-header" data-target="sessionInfoContent">
+                            <i class="fas fa-info-circle"></i> Session Info
+                            <i class="fas fa-chevron-down toggle-icon"></i>
+                        </h3>
+                        <div class="section-content" id="sessionInfoContent">
+                            <div id="sessionInfo" class="session-info">
+                                <div class="info-item">
+                                    <span class="label">Session ID:</span>
+                                    <span class="value" id="sessionId">-</span>
+                                </div>
+                                <div class="info-item">
+                                    <span class="label">Messages:</span>
+                                    <span class="value" id="messageCount">0</span>
+                                </div>
+                                <div class="info-item">
+                                    <span class="label">Status:</span>
+                                    <span class="value" id="sessionStatus">Ready</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sidebar-section collapsible-section">
+                        <h3 class="section-header" data-target="actionsContent">
+                            <i class="fas fa-cog"></i> Actions
+                            <i class="fas fa-chevron-down toggle-icon"></i>
+                        </h3>
+                        <div class="section-content" id="actionsContent">
+                            <button class="action-btn clear-btn" id="clearContextBtn">
+                                <i class="fas fa-eraser"></i>
+                                Clear Context
+                            </button>
+                            <button class="action-btn export-btn" id="exportChatBtn">
+                                <i class="fas fa-download"></i>
+                                Export Chat
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </aside>
+            </div>
 
             <!-- Chat Area -->
             <div class="chat-container">
