--- a/static/index.html
+++ b/static/index.html
@@ -229,6 +229,17 @@
         </div>
     </div>
 
+    <!-- File Preview Panel -->
+    <div id="filePreview" class="file-preview">
+        <div class="file-preview-header">
+            <h3 id="previewFileName">File Preview</h3>
+            <button id="closePreviewBtn" title="Close preview">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <div id="previewFileContent"></div>
+    </div>
+
     <script src="/static/app.js"></script>
 </body>
 </html> 
