--- a/static/index.html
+++ b/static/index.html
@@ -26,6 +26,9 @@
                 <div class="status-indicator">
                     <div class="status-dot" id="connectionStatus"></div>
                     <span id="connectionText">Connecting...</span>
+                    <button id="themeToggleBtn" class="theme-toggle-btn" title="Toggle theme">
+                        <i class="fas fa-moon"></i>
+                    </button>
                 </div>
             </div>
         </header>
@@ -220,9 +223,6 @@
             </div>
         </div>
     </div>
-
-    <!-- File Preview Overlay -->
-    <div id="filePreviewOverlay" class="file-preview-overlay"></div>
 
     <!-- File Preview Panel -->
     <div id="filePreview" class="file-preview">
